[package]
name = "radlibs"
description = "a simple rust implementation of the iconic mad-libs game"
version = "1.0.0"
authors = ["Dexter Gaon-Shatford <dexter.gaonshatford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
